<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:orientation="vertical"
              android:layout_gravity="top">
    <TextView
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:textStyle="bold"
            android:text="@string/app_name"
            android:paddingBottom="5dp"
            android:textSize="20dp"
            android:paddingRight="5dp"
            android:paddingLeft="5dp"
            />
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="3dp"
                android:textStyle="bold"
                android:text="@string/desenvolvedor"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:layout_weight="1"
                android:text="@string/nome_desenvolvedor"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:paddingLeft="5dp"
                android:paddingRight="3dp"
                android:textStyle="bold"
                android:text="@string/versao"/>
        <TextView
                android:layout_height="wrap_content"
                android:layout_width="fill_parent"
                android:paddingLeft="3dp"
                android:paddingRight="3dp"
                android:layout_weight="1"
                android:id="@+id/sobre_versao"/>
    </LinearLayout>

</LinearLayout>