<?xml version="1.0" encoding="utf-8"?>
<!--suppress AndroidLintNestedWeights -->
<!--
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true">
            -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:id="@+id/pagina_layout_dia"
                  android:background="#FFFFFF"
                  android:paddingLeft="6dp"
                  android:paddingRight="6dp"
                  android:paddingTop="2dp"
                  android:paddingBottom="2dp"
            >
        <!-- Titulo Dia -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:background="@drawable/caderno_data_titulo_dia"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                >
            <!--suppress AndroidLintContentDescription -->
            <ImageView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:layout_weight="2"
                    android:src="@drawable/arrow_180"
                    android:scaleType="centerInside"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:paddingLeft="5dp"
                    android:id="@+id/pagina_dia_anterior"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:textSize="15dp"
                    android:textColor="#336699"
                    android:gravity="center"
                    android:paddingTop="2dp"
                    android:paddingBottom="2dp"
                    android:id="@+id/caderno_data"/>
            <!--suppress AndroidLintContentDescription -->
            <ImageView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:layout_weight="2"
                    android:src="@drawable/arrow"
                    android:scaleType="centerInside"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:gravity="right"
                    android:paddingRight="5dp"
                    android:id="@+id/pagina_dia_posterior"
                    />

        </LinearLayout>
        <!-- Limites e total de pontos -->
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingTop="4dip"
                android:paddingBottom="4dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:paddingRight="1dp"
                    android:gravity="left"
                    android:layout_weight="1"
                    android:text="@string/defina_metas"
                    android:textColor="#FF8000"
                    android:textStyle="bold"
                    android:id="@+id/caderno_limite_dia"/>
            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingRight="2dp"
                    android:gravity="right"
                    android:textStyle="bold"
                    android:text="@string/zero_pontos"
                    android:textColor="#FF8000"
                    android:id="@+id/caderno_total"/>
        </LinearLayout>
        <!--Texto consumo -->
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingTop="2dip"
                android:paddingBottom="2dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/cadastre_consumo"
                    android:layout_gravity="left"
                    android:textColor="#000000"
                    android:textSize="11dp"
                    />
        </LinearLayout>
        <!--Entradas consumo -->
        <LinearLayout
                xmlns:android="http://schemas.android.com/apk/res/android"
                android:paddingTop="2dip"
                android:paddingBottom="2dip"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:paddingTop="0dip"
                    android:paddingBottom="0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="11dp"
                        android:text="@string/entrada"
                        android:textColor="#000000"
                        />
                <AutoCompleteTextView
                        android:layout_height="fill_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="11dp"
                        android:inputType="textCapSentences"
                        android:id="@+id/caderno_entrada"
                        />
            </LinearLayout>
            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:paddingTop="0dip"
                    android:paddingBottom="0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="11dp"
                        android:text="@string/quantidade"
                        android:textColor="#000000"
                        />
                <EditText
                        android:layout_height="fill_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="11dp"
                        android:inputType="numberDecimal"
                        android:digits="0123456789.,"
                        android:id="@+id/caderno_quantidade"
                        />
            </LinearLayout>
            <LinearLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:paddingTop="0dip"
                    android:paddingBottom="0dip"
                    android:layout_width="fill_parent"
                    android:layout_height="32dp"
                    android:orientation="horizontal">
                <TextView
                        android:layout_width="70dp"
                        android:layout_height="fill_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:textSize="11dp"
                        android:text="@string/pontos"
                        android:textColor="#000000"
                        />
                <EditText
                        android:layout_height="fill_parent"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:textSize="11dp"
                        android:inputType="numberDecimal"
                        android:digits="0123456789.,"
                        android:id="@+id/caderno_pontos"
                        />
            </LinearLayout>
        </LinearLayout>
        <!-- Botao salvar -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="@drawable/caderno_calendario"
                android:id="@+id/linear_salvar"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:orientation="horizontal"
                >
            <!--suppress AndroidLintContentDescription -->
            <ImageView
                    android:id="@+id/caderno_adicionar"
                    android:src="@drawable/plus"
                    android:layout_width="fill_parent"
                    android:layout_weight="50"
                    android:layout_height="fill_parent"
                    android:scaleType="fitEnd"
                    android:gravity="right|center_vertical"
                    android:paddingRight="4dp"
                    />
            <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="fill_parent"
                    android:text="@string/gravar"
                    android:textColor="#FFFFFF"
                    android:layout_weight="45"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:gravity="left|center_vertical"
                    />
        </LinearLayout>
        <!--Cabecalho entradas -->
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="0dp"
                >
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/caderno_entradas_cabecalho"
                    android:text="@string/entrada"
                    android:textColor="#000000"
                    android:textStyle="bold"
                    android:layout_weight="12"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/caderno_entradas_cabecalho"
                    android:text="@string/quantidade"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_weight="15"
                    />
            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/caderno_entradas_cabecalho"
                    android:text="@string/pontos"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_weight="15"
                    />

            <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/caderno_entradas_cabecalho"
                    android:text="@string/pontos_multiplicados"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:layout_weight="15"
                    />
        </LinearLayout>

        <!-- Lista entradas -->
    <!--
    <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/caderno_linear_dia"
                android:layout_weight="1"
                >
                -->
        <ListView android:id="@+id/caderno_lista_dia"
                  android:layout_width="fill_parent"
                  android:layout_height="fill_parent"
                  android:layout_weight="1"
                >
        </ListView>
        <!--</LinearLayout> -->
        <!-- Botao calendario -->
        <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="30dp"
                android:background="@drawable/caderno_calendario"
                android:id="@+id/linear_calendario"
                android:paddingBottom="4dp"
                android:paddingTop="4dp"
                android:layout_marginBottom="3dp"
                android:layout_marginTop="3dp"
                >
            <!--suppress AndroidLintContentDescription -->
            <ImageView
                    android:src="@drawable/calendar_blue"
                    android:id="@+id/img_calendario"
                    android:layout_width="fill_parent"
                    android:layout_weight="85"
                    android:layout_height="fill_parent"
                    android:scaleType="fitEnd"
                    android:gravity="right|center_vertical"
                    android:paddingRight="4dp"
                    />
            <TextView
                    android:layout_height="fill_parent"
                    android:layout_width="fill_parent"
                    android:text="@string/botao_calendario"
                    android:textColor="#FFFFFF"
                    android:layout_weight="45"
                    android:textStyle="bold"
                    android:textSize="18dp"
                    android:gravity="left|center_vertical"
                    />
        </LinearLayout>
        <!-- propaganda -->
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                      xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
                      android:orientation="vertical"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content">
            <com.google.ads.AdView android:id="@+id/adView"
                                   android:layout_width="320dp"
                                   android:layout_height="50dp"
                                   android:gravity="center"
                                   ads:adUnitId="a14fbcc72821821"
                                   ads:adSize="BANNER"
                                   ads:loadAdOnCreate="true"/>
        </LinearLayout>
    </LinearLayout>
<!--
</ScrollView>
-->